--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "redux-debounced": "^0.5.0",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.1"
