--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "animejs": "^3.2.1",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-anime": "^4.0.4",
     "react-dom": "^17.0.2",
+    "react-motion": "^0.5.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
