--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash.debounce": "^4.0.8",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-anime": "^4.0.4",
     "react-dom": "^17.0.2",
     "react-motion": "^0.5.2",
