--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-motion": "^0.5.2",
     "react-redux": "^7.2.3",
+    "react-route-transition": "^1.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
