--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://timothy-merchant.github.io/develop-me--technical-challenge",
+  "homepage": "http://timothy-merchant.github.io/",
   "name": "table-tennis-app-frontend",
   "version": "0.1.0",
   "private": true,
